src/objects/QPMS__Audit_Junction__c.object
<CustomObject>
    <description>This is the junction object for audit module.</description>
    <fields>
        <fullName>QPMS__Access_Level__c</fullName>
        <description>To Determine the access on  the record</description>
        <inlineHelpText>To Determine the access on  the record</inlineHelpText>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__AuditParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used in Audit-Audit reference</description>
        <label>AuditParent</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Audit_Junctions (AuditParent)</relationshipLabel>
        <relationshipName>Audit_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditProgramName__c</fullName>
        <formula>QPMS__Audit_Program_Child__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AuditProgramName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Child_Name__c</fullName>
        <formula>QPMS__AuditParent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hold reference of child audit program which is used in audit reference module</description>
        <label>Audit Child</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Audit_Junctions (Audit Child)</relationshipLabel>
        <relationshipName>Audit_Junctions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Name__c</fullName>
        <formula>QPMS__Audit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hold reference of child audit program which is used in audit program reference module</description>
        <label>Audit Program Child</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>Audit_Junctions (Audit Program Child)</relationshipLabel>
        <relationshipName>Audit_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to Audit program object</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is self lookup to audit junction object type for audit question.</description>
        <label>Audit Question</label>
        <referenceTo>QPMS__Audit_Junction__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is look up to Audit type object</description>
        <label>Audit Type</label>
        <referenceTo>QPMS__Audit_Type__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store audit id</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold look up for business entity</description>
        <inlineHelpText>To hold look up for business entity</inlineHelpText>
        <label>Business Entity</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store capa id</description>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a  lookup to checklist object</description>
        <label>Checklist</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Audit_Junction</relationshipLabel>
        <relationshipName>Audit_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Information__c</fullName>
        <description>This field is used to store supplier contact id</description>
        <label>Contact Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to general task object.</description>
        <label>General Task</label>
        <referenceTo>QPMS__General_Task__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Group_Id__c</fullName>
        <description>to display group ids</description>
        <inlineHelpText>to display group ids</inlineHelpText>
        <label>Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To hold look up for Manufacturing Site</description>
        <inlineHelpText>To hold look up for Manufacturing Site</inlineHelpText>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <description>This field is used to save name value</description>
        <label>Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NonConformanceName__c</fullName>
        <formula>QPMS__Non_Conformance__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonConformanceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used in NC-Audit reference</description>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Name__c</fullName>
        <formula>QPMS__Observation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Observation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to observation object</description>
        <label>Observation</label>
        <referenceTo>QPMS__Observation__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save the process</description>
        <label>Process</label>
        <referenceTo>QPMS__Process__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Audit_Junctions</relationshipLabel>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to question object</description>
        <label>Question</label>
        <referenceTo>QPMS__Question__c</referenceTo>
        <relationshipLabel>Audit_Junction</relationshipLabel>
        <relationshipName>Audit_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to save section</description>
        <label>Section</label>
        <referenceTo>QPMS__Section__c</referenceTo>
        <relationshipLabel>Audit_Junction</relationshipLabel>
        <relationshipName>Audit_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>This field is to save title</description>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>To Determine  The Security Entity is User or Group</description>
        <inlineHelpText>To Determine  The Security Entity is User or Group</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Additional Auditors</fullName>
                </value>
                <value>
                    <fullName>Sites</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Sub Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is look up to user object</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Junction</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>QPMS__Audit_Type__c</columns>
        <columns>QPMS__Contact_Information__c</columns>
        <columns>QPMS__Name__c</columns>
        <columns>QPMS__Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QPMS__Audit_Junction__c.QPMS__Interviewed_Personnel</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit_Junctions</pluralLabel>
    <recordTypes>
        <fullName>QPMS__AuditAuditType</fullName>
        <active>true</active>
        <description>This is  a Audit Audittype  record type.</description>
        <label>AuditAuditType</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AuditChecklist</fullName>
        <active>true</active>
        <description>This is audit checklist  related record type.</description>
        <label>AuditChecklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AuditProcess</fullName>
        <active>true</active>
        <description>This is a audit process record type.</description>
        <label>AuditProcess</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AuditProduct</fullName>
        <active>true</active>
        <description>This is a Audit product recordtype</description>
        <label>AuditProduct</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AuditQuestion</fullName>
        <active>true</active>
        <description>This is a Audit Question record type</description>
        <label>AuditQuestion</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AuditQuestionObservation</fullName>
        <active>true</active>
        <description>This is Audit Question Observation record type</description>
        <label>AuditQuestionObservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AuditTypeChecklist</fullName>
        <active>true</active>
        <description>This is  a record type of AuditType_Checklist</description>
        <label>AuditTypeChecklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__ChecklistSection</fullName>
        <active>true</active>
        <description>This is a ChecklistSection record type.</description>
        <label>ChecklistSection</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Interviewed_Personnel</fullName>
        <active>true</active>
        <description>Interviewed Personnel Record Type</description>
        <label>Interviewed Personnel</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__QuestionSection</fullName>
        <active>true</active>
        <description>This is Question Section record type.</description>
        <label>QuestionSection</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__SectionObservation</fullName>
        <active>true</active>
        <label>SectionObservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__TaskChecklist</fullName>
        <active>true</active>
        <description>This is a Task checklist record type</description>
        <label>TaskChecklist</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>